test/corpus/statement/for.txt
===
Base for statement
===

fn main() {
    for(let i : i32 = 0; i < 10; i = i + 1) {
        println("hello");
    }
}

---
    (source_file
      (function_definition
        (function_keyword)
        (identifier)
        (argument_list)
        (block
          (for_statement
            (variable_definition_statement
              (identifier)
              (type_i32)
              (assign_operator)
              (number_literal))
            (binary_expression
              (identifier)
              (less_operator)
              (number_literal))
            (assign_expression
              (identifier)
              (assign_operator)
              (binary_expression
                (identifier)
                (add_operator)
                (number_literal)))
            (block
              (expression_statement
                (function_call_expression
                  (identifier)
                  (string_literal))))))))

===
For statement without initialization
===

fn main() {
    let i : i32 = 0;
    for(i < 10; i = i + 1) {
        println("hello");
    }
}

---
    (source_file
      (function_definition
        (function_keyword)
        (identifier)
        (argument_list)
        (block
          (variable_definition_statement
            (identifier)
            (type_i32)
            (assign_operator)
            (number_literal))
          (for_statement
            (binary_expression
              (identifier)
              (less_operator)
              (number_literal))
            (assign_expression
              (identifier)
              (assign_operator)
              (binary_expression
                (identifier)
                (add_operator)
                (number_literal)))
            (block
              (expression_statement
                (function_call_expression
                  (identifier)
                  (string_literal))))))))
